--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AccueilController!{% endblock %}
+{% block title %}Accueil{% endblock %}
 
 {% block body %}
 <style>
@@ -13,8 +13,8 @@
 
     This friendly message is coming from:
     <ul>
-        <li>Your controller at <code>/home/fabrice/Bureau/MonProjet/src/Controller/AccueilController.php</code></li>
-        <li>Your template at <code>/home/fabrice/Bureau/MonProjet/templates/accueil/index.html.twig</code></li>
+        <li>Your controller at <code>/home/fabrice/Bureau/the_district/src/Controller/AccueilController.php</code></li>
+        <li>Your template at <code>/home/fabrice/Bureau/the_district/templates/accueil/index.html.twig</code></li>
     </ul>
 </div>
 {% endblock %}
