--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,6 +30,9 @@
         <li class="nav-item">
         <a class="nav-link " href="{{ path('app_register')}}">link</a>
         </li>
+        <li class="nav-item">
+        <a class="nav-link " href="{{ path('app_contact')}}">link</a>
+        </li>
     </ul>
     
     </div>
