--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,20 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}AccueilController{% endblock %}
+{% block title %}The District{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{path ('app_accueil')  }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/fabrice/Bureau/the_district/src/Controller/AccueilController.php</code></li>
-        <li>Your template at <code>/home/fabrice/Bureau/the_district/templates/accueil/index.html.twig</code></li>
-    </ul>
-</div>
+<section class="container">
+			<h1><span class="flux">The</span> <span class="slider">District</span></h1>
+			<h2>BEST-SELLERS</h2>
+			<div id="slider">
+                <img src="image/bg.jpg" alt="" />
+				<img src="image/bg1.jpeg" alt="" />
+				<img src="image/bg2.jpeg" alt="" />
+				<img src="image/bg3.jpeg" alt="" />
+            </div>
+            
 {% endblock %}
