--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,15 +1,47 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ContactController!{% endblock %}
+{# {% block title %}Formulaire de contact{% endblock %} #}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<div class="container d-block position-relative justify-content-center text-center mx-auto h-60 w-40 ">
+
+   <h1>Formulaire de contact</h1>
 
 
 
-    {{ form(form) }}
+    {# {% for flash_error in app.flashes('verify_email_error') %}
+        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
+    {% endfor %} #}
 
+ 
+
+     {{ form_start(form) }}
+<div class="my-custom-class-for-errors">
+    {{ form_errors(form) }}
+</div>
+
+<div class="row d-block">
+<div class="col-9 mx-auto mt-4">
+    {{ form_label(form.objet, "Objet" ) }}
+    {{ form_widget(form.objet, {'attr': {'class': 'btn-light'} }) }}
+    {{ form_errors(form.objet) }}
+</div>
+
+<div class="col-9 mx-auto mb-2 mt-2">
+    {{ form_label(form.email, "Email" ) }}
+    {{ form_widget(form.email, {'attr': {'class': 'btn-light'} }) }}
+    {{ form_errors(form.email) }}
+</div>
+
+<div class="col-9 mx-auto mb-2 mt-2 mb-2">
+    {{ form_label(form.messages, "Message" ) }}
+    {{ form_widget(form.messages, {'attr': {'class': 'btn-light'} }) }}
+    {{ form_errors(form.messages) }}
+</div>
+
+</div>
+    {{ form_end(form) }}
+    </div>
+
+ 
 {% endblock %}
