--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -6,11 +6,15 @@
 <section class="container">
 			<h1><span class="flux">The</span> <span class="slider">District</span></h1>
 			<h2>BEST-SELLERS</h2>
+			{% for categorie in categories %}
 			<div id="slider">
-                <img src="image/bg.jpg" alt="" />
+				{{ categorie.label | upper }} - <b class="btn-primary p-1">{{ categories.plats | length }}</b> plats
+                {# <img src="image/bg.jpg" alt="" />
 				<img src="image/bg1.jpeg" alt="" />
 				<img src="image/bg2.jpeg" alt="" />
-				<img src="image/bg3.jpeg" alt="" />
+				<img src="image/bg3.jpeg" alt="" /> #}
             </div>
+			{% endfor %}
+</section>
             
 {% endblock %}
