--- a/public/css/style.css
+++ b/public/css/style.css
@@ -183,16 +183,16 @@ body {
     margin: 0
 }
 
-body section.container {
-    width: 100%;
+section.container {
+    width: auto;
     overflow: hidden;
     justify-content: center;
-    /* max-width: 100%; */
+ max-width: 100%; 
     margin: auto 40px
     
 }
 
-body section.container h1 {
+section.container h1 {
     color: #DDD;
     font-size: 3em;
     font-weight: bold;
@@ -202,7 +202,7 @@ body section.container h1 {
     margin-bottom: 0.2em
 }
 
-body section.container h2 {
+section.container h2 {
     font-size: 1.8em;
     color: #666;
     text-align: center;
@@ -225,11 +225,12 @@ body section.container div#slider {
     box-sizing: content-box;
     padding: 20px 0;
     background: rgba(52, 51, 51, 0.3);
-    -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 0 8px rgba(0, 0, 0, 0.9) inset
+    -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 0 8px rgba(0, 0, 0, 0.9) inset;
+    box-shadow: 0 1px 0 black 
 }
 
 body section.container div#slider div.fluxslider div.surface {
-    width: 100%;
+    width: auto;
     border: 1px solid rgba(255, 255, 255, 0.1);
     -moz-box-sizing: content-box;
     -webkit-box-sizing: content-box;
