--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,177 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
+.carousel-3D-swiper-section {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 14px;
+	color: #000;
+	margin: 0;
+	padding: 0;
+	max-width: 1200px;
+	margin: auto;
+	overflow: hidden;
+	min-height: 500px;
+}
+
+.carousel-3D-swiper-title {
+	text-align: center;
+	font-size: 3rem;
+	color: orangered;
+}
+
+.carousel-3D-swiper .swiper-slide {
+    display: flex;
+	position: relative;
+}
+
+.carousel-3D-swiper .image-wrapper {
+	overflow: hidden;
+	@apply aspect-video; 
+	max-height: 225px;
+}
+
+.carousel-3D-swiper .image-wrapper img {
+	display: block;
+	width: 100%;
+
+	max-height: 225px;
+	-o-object-fit: cover;
+	object-fit: cover;
+	border-radius: 8px;
+	-webkit-box-reflect: below 5px -webkit-linear-gradient(bottom, rgba( 255, 0, 0,	0.1 ) 0%, transparent 32px, transparent 100%);
+}
+
+.details {
+	padding: 25px 20px;
+	font-weight: 600;
+	text-align: center;
+	background-color: #fff;
+}
+
+.details span {
+	display: block;
+	font-size: 16px;
+	color: #f44336;
+}
+
+.details h3 {
+	margin: 0;
+	font-weight: bold;
+	font-size: 24px;
+	line-height: 1.1;
+}
+
+.details p {
+	margin: 8px 0 0;
+	opacity: 0.65;
+	font-size: 14px;
+	font-weight: 500;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+	overflow: hidden;
+}
+
+.carousel-3D-swiper-section .swiper-pagination-bullet {
+	margin: 0 4px;
+  width: 16px;
+  height: 16px;
+	z-index: 50;
+}
+
+.carousel-3D-swiper-section .swiper-pagination-bullet-active {
+	opacity: 1;
+	background: orange;
+}
+
+/* #carousel {
+    width: 100%;
+    max-width: 100vw;
+    height: 21vh;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    overflow: hidden;
+}
+.carousel-image {
+    height: 20vh;
+    max-height: 200px;
+    position: absolute;
+    left: 50%;
+    border-radius: 7%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+}
+#carousel-image-0 {
+    transform: translateX(-50%) translateX(-120%) scale(0.6);
+    filter: brightness(40%);
+    z-index: 1;
+}
+
+#carousel-image-1 {
+    transform: translateX(-50%) translateX(-80%) scale(0.8);
+    filter: brightness(65%);
+    opacity: 1;
+    z-index: 2;
+}
+
+#carousel-image-2 {
+    transform: translateX(-50%) scale(1);
+    filter: brightness(100%);
+    opacity: 1;
+    z-index: 3;
+}
+
+#carousel-image-3 {
+    transform: translateX(-50%) translateX(80%) scale(0.8);
+    filter: brightness(65%);
+    opacity: 1;
+    z-index: 2;
+}
+
+#carousel-image-4 {
+    transform: translateX(-50%) translateX(120%) scale(0.6);
+    filter: brightness(40%);
+    opacity: 1;
+    z-index: 1;
+}
+
+#carousel-image-5 {
+    transform: translateX(-50%) scale(1.5);
+    filter: brightness(40%);
+    opacity: 0;
+    z-index: 1;
+}
+
+@keyframes mv0to5 {
+    0% { transform: translateX(-50%) translateX(-120%) scale(0.6); filter: brightness(40%); opacity: 1; z-index: 2}
+    20% { opacity: 0; }
+    100% { transform: translateX(-50%) scale(0.6);  filter: brightness(40%); opacity: 0; z-index:1}
+}
+
+@keyframes mv5to0 {
+    0% { transform: translateX(-50%) scale(0.6);  filter: brightness(40%); opacity: 0; z-index:1}    
+    80% {opacity:0;}
+    100% { transform: translateX(-50%) translateX(-120%) scale(0.6);  filter: brightness(40%); opacity: 1; z-index:2}    
+}
+
+.mv0to5 {
+    animation: 0.3s ease-out mv0to5;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+} */
+/* .mv5to0 {
+    animation: 0.3s ease-out mv5to0;
+    animation-iteration-count: 1;
+    animation-fill-mode: backwards;
+} */
+
 /* h1,
 h2,
 h3,
 h4,
 h5,
 h6,
-p, */
+p, 
 blockquote,
 pre,
 
@@ -108,9 +268,9 @@ td {
     text-align: left;
     font-weight: normal;
     vertical-align: middle
-}
+} */
 
-q,
+/* q,
 blockquote {
     quotes: none
 }
@@ -153,12 +313,12 @@ menu,
 nav,
 section {
     display: block
-}
+} */
 
 * {
-    -moz-box-sizing: border-box;
+    /* -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    -ms-box-sizing: border-box;
+    -ms-box-sizing: border-box; */
     box-sizing: border-box
 }
 
@@ -171,196 +331,24 @@ p {
     color: #CCC;
 }
 
-html {
+/* html {
     background: #2F2F2F
-}
+} */
 
 body {
-    background: #2F2F2F;
+    /* background: #2F2F2F; */
     min-height: 100%;
     font-family: helvetica, arial, sans-serif;
     overflow-x: hidden;
     margin: 0
 }
 
-section.container {
+/* section.container {
     width: auto;
     overflow: hidden;
     justify-content: center;
- max-width: 100%; 
+ max-width: 100%;
     margin: auto 40px
     
-}
+} */
 
-section.container h1 {
-    color: #DDD;
-    font-size: 3em;
-    font-weight: bold;
-    text-align: center;
-    text-shadow: 0 1px 0px #000;
-    text-transform: lowercase;
-    margin-bottom: 0.2em
-}
-
-section.container h2 {
-    font-size: 1.8em;
-    color: #666;
-    text-align: center;
-    margin-bottom: 4em;
-    font-weight: 300;
-    text-shadow: 0 1px 0px rgba(0, 0, 0, 0.5)
-}
-
-body section.container div#slider {
-    overflow: hidden;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -o-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -khtml-border-radius: 3px;
-    border-radius: 3px;
-    -moz-box-sizing: content-box;
-    -webkit-box-sizing: content-box;
-    -ms-box-sizing: content-box;
-    box-sizing: content-box;
-    padding: 20px 0;
-    background: rgba(52, 51, 51, 0.3);
-    -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 0 8px rgba(0, 0, 0, 0.9) inset;
-    box-shadow: 0 1px 0 black 
-}
-
-body section.container div#slider div.fluxslider div.surface {
-    width: auto;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    -moz-box-sizing: content-box;
-    -webkit-box-sizing: content-box;
-    -ms-box-sizing: content-box;
-    box-sizing: content-box
-}
-
-body section.container div#slider div.fluxslider ul.pagination {
-    -moz-box-sizing: content-box;
-    -webkit-box-sizing: content-box;
-    -ms-box-sizing: content-box;
-    box-sizing: content-box;
-    padding: 10px 0 !important;
-    overflow: hidden
-}
-
-body section.container div#slider div.fluxslider ul.pagination li {
-    text-indent: 10000px;
-    height: 8px;
-    width: 8px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -o-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -khtml-border-radius: 10px;
-    border-radius: 10px;
-    background: rgba(0, 0, 0, 0.6);
-    -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1)
-}
-
-body section.container div#slider div.fluxslider ul.pagination li.current {
-    background: rgba(255, 255, 255, 0.2)
-}
-
-footer {
-    width: 100%;
-    text-align: center;
-    font-size: 0.7em;
-    margin-top: 4em;
-    color: #666
-}
-
-footer p {
-    margin-bottom: 2em
-}
-
-body#transitiongallery section.container {
-    width: 960px
-}
-
-body#transitiongallery section.container div#slidercontainer {
-    position: relative
-}
-
-body#transitiongallery section.container div#slidercontainer div#transitions {
-    position: absolute;
-    z-index: 50;
-    top: 20px;
-    right: 20px;
-    width: 150px;
-    font-size: 0.85em
-}
-
-body#transitiongallery section.container div#slidercontainer div#transitions h2 {
-    font-size: 1em;
-    text-align: left;
-    color: #CCC;
-    font-weight: bold;
-    margin-bottom: 0.7em
-}
-
-body#transitiongallery section.container div#slidercontainer div#transitions ul {
-    margin-bottom: 1.5em
-}
-
-body#transitiongallery section.container div#slidercontainer div#transitions ul li {
-    font-size: 0.8em;
-    margin-bottom: 0.7em
-}
-
-body#transitiongallery section.container div#slidercontainer div#transitions ul li a {
-    display: block;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -o-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -khtml-border-radius: 3px;
-    border-radius: 3px;
-    padding: 0.5em;
-    background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #444444), color-stop(100%, #333333));
-    background-image: -webkit-linear-gradient(top, #444444, #333333);
-    background-image: -moz-linear-gradient(top, #444444, #333333);
-    background-image: -o-linear-gradient(top, #444444, #333333);
-    background-image: -ms-linear-gradient(top, #444444, #333333);
-    background-image: linear-gradient(top, #444444, #333333);
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    -webkit-box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2) inset;
-    -moz-box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2) inset;
-    -o-box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2) inset;
-    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2) inset;
-    position: relative
-}
-
-body#transitiongallery section.container div#slidercontainer div#transitions ul li a:active {
-    top: 1px
-}
-
-body#transitiongallery section.container div#slidercontainer div#transitions ul li a.new:after {
-    content: 'New';
-    font-size: 0.8em;
-    padding: 0.2em 0.4em;
-    color: #FFF;
-    background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dd4c10), color-stop(100%, #d23a13));
-    background-image: -webkit-linear-gradient(top, #dd4c10, #d23a13);
-    background-image: -moz-linear-gradient(top, #dd4c10, #d23a13);
-    background-image: -o-linear-gradient(top, #dd4c10, #d23a13);
-    background-image: -ms-linear-gradient(top, #dd4c10, #d23a13);
-    background-image: linear-gradient(top, #dd4c10, #d23a13);
-    border: 1px solid #FFF;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -o-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -khtml-border-radius: 4px;
-    border-radius: 4px;
-    -moz-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
-    -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
-    -o-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
-    position: absolute;
-    top: -0.5em;
-    right: -0.5em
-}
