--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,37 +1,3 @@
-{# {% extends 'base.html.twig' %}
-
-{% block title %}The District{% endblock %}
-
-{% block body %}
-<section class="container"> 
-    
-        {% for categorie in categories %}
-      
-              <div id="slider" >
-              
-                <img src="{{ asset(categorie.image) }}">
-            
-                <h2>{{ categorie.libelle }}</h2>
-        
-        {% endfor %}
-        
-    </div>
-</section>
-
-
-{% endblock %} #}
-    {# const images = document.querySelectorAll('#slider img');
-    let currentIndex = 0;
-
-    // Fonction pour afficher l'image suivante
-    function showNextImage() {
-        images[currentIndex].style.display = 'none'; // Masquer l'image actuelle
-        currentIndex = (currentIndex + 1) % images.length; // Passer à l'image suivante (boucle)
-        images[currentIndex].style.display = 'column'; // Afficher la nouvelle image
-    } #}
-
-
-
 {% extends 'base.html.twig' %}
 
 {% block title %}The District{% endblock %}
@@ -39,70 +5,67 @@
 {% block body %}
 
 
-    <section class="my-10">
-	<h2 class="carousel-3D-swiper-title">Lorem ipsum dolor sit amet</h2>
 
-    {% for categorie in categories %} 
+{# <carousel-3d>
+    <slide v-for="(slide, i) in slides" :index="i" :key="i">
+        <template slot-scope="{ index, isCurrent, leftIndex, rightIndex }">
+            <img :data-index="index" :class="{ current: isCurrent, onLeft: (leftIndex >= 0), onRight: (rightIndex >= 0) }" :src="slide.src">
+        </template>
+    </slide>
+</carousel-3d> #}
+{# <style>
+.carousel-home-resources {
+  .left-1 {
+    transform: translateX(-500px) translateZ(-400px) rotateY(-30deg) !important;
+  }
+  .right-1 {
+    transform: translateX(500px) translateZ(-400px) rotateY(30deg) !important;
+  }
+}
+</style> #}
 
-
-
-	<div class="carousel-3D-swiper-section">
-		<!-- Slider main container -->
-		<div class="carousel-3D-swiper">
-			<!-- Additional required wrapper -->
-			<div class="swiper-wrapper" >
-				<!-- Slides -->
-				<div class="swiper-slide">
-					<div class="image-wrapper aspect-video img">
-  <img src="{{ asset(categorie.image) }}" >
-         
-					{# <div class="details">
-						<h3>Lorem ipsum dolor</h3>
-						<span>Web Designer</span>
-						<p>Lorem ipsum dolor</p>
-					</div> #}
-			
-  
- </div>
-   </div>
-   </div>
-</div>
-   </div>       
+<div id="app">
+{% for categorie in categories %}
+  <carousel-3d>
+<slide v-for="(slide, i) in slides" :index="i" :key="i">
+        <template slot-scope="{ index, isCurrent, leftIndex, rightIndex }">
+          <img :data-index="index" :class="{ current: isCurrent, onLeft: (leftIndex >= 0), onRight: (rightIndex >= 0) }" :src.slide="{{ asset(categorie.image) }}">    
+       </template>
+    </slide>
+     </carousel-3d>
+          
 {% endfor %}
 
+</div> 
 
-    </section>  
+
+
+{# <script scoped>
+new Vue({
+  el: '#carousel3d',
+  data: {
+    slides: 7
+  },
+  components: {
+    'carousel-3d': window['carousel-3d'].Carousel3d,
+    'slide': window['carousel-3d'].Slide
+  }
+});
+</script>  #}
+<script src="https://wlada.github.io/vue-carousel-3d/js/carousel-3d.umd.js"></script> 
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"></script> 
 
 
 
    
- <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.2/js/swiper.min.js"></script>
+	{# <div class="details">
+						<h3>Lorem ipsum dolor</h3>
+						<span>Web Designer</span>
+						<p>Lorem ipsum dolor</p>
+					</div> #}
 <script>
-const carousel3Dswiper = new Swiper(".carousel-3D-swiper", {
-    loop: true,
-    effect: "coverflow",
-    grabCursor: true,
-    centeredSlides: true,
-    slidesPerView: 3,
-    coverflowEffect: {
-      rotate: 0,
-      stretch: 0,
-      depth: 350,
-      modifier: 1,
-      slideShadows: true
-    },
-		 navigation: {
-      nextEl: ".swiper-button-next",
-      prevEl: ".swiper-button-prev",
-    },
-    pagination: {
-      el: ".swiper-pagination"
-    }
-  });
-
-</script>
-
-{# import autoplay from "@/carousel-3d/mixins/autoplay";
+import autoplay from "@/carousel-3d/mixins/autoplay";
 import Controls from "@/carousel-3d/Controls";
 
 const noop = () => {
@@ -552,10 +515,10 @@ export default {
     }
   }
 } 
-
+</script>
 <style >
 
-{# .carousel-3d-container {
+.carousel-3d-container {
   min-height: 1px;
   width: 100%;
   position: relative;
@@ -575,9 +538,9 @@ export default {
 } 
 
 </style>
-#}
-
 {% endblock %} 
+
+
 
 {# <script>
 console.log(window);
@@ -593,7 +556,40 @@ new Vue({
 })
 </script>
   #}
-     
+ {# {% extends 'base.html.twig' %}
+
+{% block title %}The District{% endblock %}
+
+{% block body %}
+<section class="container"> 
+    
+        {% for categorie in categories %}
+      
+              <div id="slider" >
+              
+                <img src="{{ asset(categorie.image) }}">
+            
+                <h2>{{ categorie.libelle }}</h2>
+        
+        {% endfor %}
+        
+    </div>
+</section>
+
+
+{% endblock %} #}
+    {# const images = document.querySelectorAll('#slider img');
+    let currentIndex = 0;
+
+    // Fonction pour afficher l'image suivante
+    function showNextImage() {
+        images[currentIndex].style.display = 'none'; // Masquer l'image actuelle
+        currentIndex = (currentIndex + 1) % images.length; // Passer à l'image suivante (boucle)
+        images[currentIndex].style.display = 'column'; // Afficher la nouvelle image
+    } #}
+
+
+    
   
 
    
