--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,19 +6,19 @@
         <title>{% block title %}The District{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
     
-           {# {{ encore_entry_link_tags('app') }}  #}
           {# <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
   integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
   crossorigin="anonymous"></script> #}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-   
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.2/css/swiper.min.css">
-     <link href="https://www.unpkg.com/browse/tailwindcss@2.2.19/dist/tailwind.min.css">
-         <link rel="stylesheet" href="{{ asset ('css/style.css') }}"> 
+  {# <link rel="stylesheet" href="{{ asset ('css/style.css') }}">  #}
+{# { importmap( @symfony/ux) }  #}
+{% block importmap %} 
+    {{ asset ('vue') }}
 
-    {# <link rel="stylesheet" href="{{ asset ('css/style.scss') }} "> #}
-    
+ {{ encore_entry_link_tags ('main') }} 
+  
+{% endblock %}
         {% block stylesheets %}  {% endblock %}
        
       
@@ -30,7 +30,7 @@
  
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{{path('app_accueil') }} ">Accueil</a>
+    <a class="navbar-brand" href="{{path('app_accueil') }}">Accueil</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -46,6 +46,9 @@
          <li class="nav-item">
         <a class="nav-link " href="{{ path('app_register')}}">S'enregistrer</a>
         </li>
+        {# <li class="nav-item">
+        <a class="nav-link " href="{{ path('ux_vue')}}">S'enregistrer</a>
+        </li> #}
     </ul>
     
     </div>
@@ -53,7 +56,7 @@
 </nav>
        
     
-         {# <div class="container-fluid">
+         <div class="container-fluid">
      
           <div class="col-sm-8 offset-sm-2 mt-5">
 
@@ -62,13 +65,17 @@
       
 
   </div>
-  </div>     #}
+  </div>    
 
         {% block body %} {% endblock %}
-   
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+   {# <script src="{{ asset ('./js/index.js') }}"> #}
+ 
+{{ encore_entry_script_tags ('main') }}
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
 
         {% block javascripts %}{% endblock %}
            
