--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,23 +9,23 @@
           {# <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
   integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
   crossorigin="anonymous"></script> #}
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  <link href="https://raw.githubusercontent.com/JohnBlazek/codepen-resources/master/3d-carousel/css/stylesheet.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+{#} <link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.2/css/swiper.min.css">
+<link href="https://www.unpkg.com/browse/tailwindcss@2.2.19/dist/tailwind.min.css"> #}
   {# <link rel="stylesheet" href="{{ asset ('css/style.css') }}">  #}
 {# { importmap( @symfony/ux) }  #}
-{% block importmap %} 
-    {{ asset ('vue') }}
 
- {{ encore_entry_link_tags ('main') }} 
-  
-{% endblock %}
-        {% block stylesheets %}  {% endblock %}
+        {% block stylesheets %}  {% endblock %} 
        
       
 
         
 
     </head>
+
+  
     <body>
  
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -55,29 +55,29 @@
   </div>
 </nav>
        
-    
-         <div class="container-fluid">
-     
-          <div class="col-sm-8 offset-sm-2 mt-5">
+<div class="container-fluid">
 
 
-    
-      
 
-  </div>
-  </div>    
 
-        {% block body %} {% endblock %}
-   {# <script src="{{ asset ('./js/index.js') }}"> #}
- 
-{{ encore_entry_script_tags ('main') }}
+</div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+
+   
+{% block body %}   {% endblock %}  
+{#} {{ encore_entry_script_tags ('main') }}  #}
+
+
+{# <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
-integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> #}
 
 
         {% block javascripts %}{% endblock %}
+     
+   {# <script src="{{ asset ('./js/index.js') }}"> #}
+ 
+
            
 
     </body>
