--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,33 @@
-body {
-    background-color: skyblue;
+* {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -ms-box-sizing: border-box; 
+    box-sizing: border-box
 }
+
+a {
+    color: #CCC;
+    text-decoration: none
+}
+
+p {
+    color: #CCC;
+}
+
+body {
+    background: #181818; 
+    min-height: 100%;
+    font-family: helvetica, arial, sans-serif;
+    overflow-x: hidden;
+    margin: 0
+} 
+
+section.container {
+    width: auto;
+    overflow: hidden;
+    justify-content: center;
+ max-width: 100%;
+    margin: auto 40px
+    
+} 
+
